--- a/capstone-project-one/index.html
+++ b/capstone-project-one/index.html
@@ -25,7 +25,7 @@
                 height: 300,
                 width: 200,
                 padding: 0,
-                backgroundColor: '#FFF',
+                backgroundColor: '#FEFFFF',
                 WebkitFilter: 'drop-shadow(0px 0px 5px #555)',
                 filter: 'drop-shadow(0px 0px 5px #555)'
             }
